Projeto/Compilador/tests/cases/error/T33.pas
program T33;
function F(x: integer): integer;
begin
  x := x + 1;
end;
begin
  writeln(F(2));
end.
